# qbricks.github.io

./: .gitignore  CNAME  Dockerfile  LICENSE  Makefile  README.md  _config.yml  container.sh  container1.sh  container2.sh  container3.sh  run_to_openqasm.sh  to_string.drv
Artifacts/SQbricks/sqbricks-sqs/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  dune-project  requirements.txt  sQbricks.opam
Artifacts/SQbricks/sqbricks-sqs/benchmarks/VeriQC/: DQC_PE_5.qasm  DQC_PE_5_2.qasm  DQC_PE_6_1.qasm  DQC_PE_7.qasm  DQC_PE_8.qasm  DQC_PE_8_1.qasm  DQC_PE_8_2.qasm  DQC_PE_9.qasm  DQC_PE_9_1.qasm  DQC_PE_9_2.qasm  DQC_bitflip_code.qasm  DQC_bitflip_code_2.qasm  DQC_phaseflip_code_1.qasm  DQC_phaseflip_code_2.qasm  DQC_qft_11.qasm  DQC_qft_11_1.qasm  DQC_qft_12.qasm  DQC_qft_12_1.qasm  DQC_qft_13.qasm  DQC_qft_13_1.qasm  DQC_qft_13_2.qasm  DQC_qft_14.qasm  DQC_qft_14_1.qasm  DQC_qft_14_2.qasm  DQC_qft_15.qasm  DQC_qft_15_1.qasm  DQC_qft_15_2.qasm  DQC_qft_16.qasm  DQC_qft_16_1.qasm  DQC_qft_16_2.qasm  DQC_qft_5.qasm  DQC_qft_5_1.qasm  (+5 more)
Artifacts/SQbricks/sqbricks-sqs/lib/: Lexer_OpenQASM.mll  Parser_Path_sum.mly  common.ml  gates.ml  parser_get.mli  parser_help.ml  path_sum.ml  path_sum.mli  poly.ml  poly.mli  program.mli  reduction_algorithm.ml  teleportation.mli  to_deferred_measurement.mli  to_feynman.ml  to_openqasm.ml  to_openqasm.mli
Artifacts/SQbricks/sqbricks-sqs/scripts/: Example-3.py  Example-4.py  benchmarks.sh  prepare-benchs.sh  qiskit-tr.py
Artifacts/SQbricks/sqbricks-sqs/test/: dune  mbqc.ml  primitives.ml  qiskit.ml  unitary.ml  verif.ml
(+1043 files in other folders)
