(lang dune 3.17)

(using menhir 3.0)

(name sQbricks)

(version 0.1.0)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Jerome Ricciardi")

(maintainers "Jerome Ricciardi")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name sQbricks)
 (synopsis "Automatic equivalence checker for hybrid quantum circuits")
 (description
  "SQbricks is a tool for verifying the equivalence of hybrid quantum circuits.\nIt combines:\n- SQL: Implementation of our lifting method enabling hybrid circuit verification\n- SQV: A unitary verification tool for quantum circuits\n\nThe tool automatically checks circuit equivalence using formal methods.")
 (depends ocaml dune)
 (tags
  (topics
   "quantum computing"
   "circuit equivalence"
   "formal verification"
   "quantum circuits"
   "hybrid circuits")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
